--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" output="bin" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/jedia/Downloads/processing-3.3.5-windows64/processing-3.3.5/core/library/core.jar"/>
+	<classpathentry kind="lib" path="C:/Users/jedia/Downloads/processing-3.3.5-windows64/processing-3.3.5/modes/java/libraries/net/library/net.jar"/>
 	<classpathentry kind="output" path="resources/code"/>
 </classpath>
