--- a/resources/build.properties
+++ b/resources/build.properties
@@ -36,8 +36,7 @@ classpath.local.location=${user.home}/eclipse-workspace/libs/
 # and project classpath. Use a comma as delimiter. These jar files must be 
 # inside your classpath.local.location folder.
 
-classpath.local.include=core.jar
-
+classpath.local.include=core.jar,net.jar
 
 # Add Processing's libraries folder to the classpath.
 # If you don't need to include the libraries folder to your classpath, comment 
