Polish documentation and library description

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -160,8 +160,8 @@ tested.processingVersion=3.2.3
 # Additional information for the generated webpage.
 
 library.copyright=(c) 2018
-library.dependencies=?
-library.keywords=?
+library.dependencies=processing.net
+library.keywords=Multiplayer, Game, Server
 
 
 # Include javadoc references into your project's javadocs.
